Feature now Van vehicle can only be parked in followed spots
