# specs/openapi.yaml
@@ -41,7 +41,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ParkLeave'
+              $ref: '#/components/schemas/ParkLeaveRequest'
       responses:
         200:
           description: OK
@@ -111,7 +111,7 @@ components:
             type: integer
             format: int64
           description: Spot position in the parking lot
-    ParkLeave:
+    ParkLeaveRequest:
       type: object
       properties:
         identification:
